<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/i1"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/对比一" />

        <ImageView
            android:id="@+id/i2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/对比二" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:paddingTop="80dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/fragment_compare">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1,2"

            >
            <TableRow android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:layout_height="match_parent"
                    android:padding="3dip"
                    android:text="@string/型号" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d3"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="match_parent"
                    android:padding="3dip"
                    android:text="@string/价格" />

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="119dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d1"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:layout_height="48dp"
                    android:padding="3dip"
                    android:text="@string/发布时间" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d2"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

            </TableRow>



            <TableRow android:layout_height="wrap_content" android:layout_width="match_parent" >

                <TextView
                    android:layout_width="22dp"
                    android:layout_height="67dp"
                    android:padding="3dip"
                    android:text="@string/手机类型" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d4"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:padding="3dip"
                    android:text="@string/操作系统" />

                <TextView
                    android:id="@+id/t5"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d5"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:padding="3dip"
                    android:text="@string/CPU" />

                <TextView
                    android:id="@+id/t6"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d6"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/CPU频率" />

                <TextView
                    android:id="@+id/t7"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/GPU" />

                <TextView
                    android:id="@+id/t8"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/运行内存" />

                <TextView
                    android:id="@+id/t9"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/机身容量" />

                <TextView
                    android:id="@+id/t10"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/电池容量" />

                <TextView
                    android:id="@+id/t11"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/充电" />

                <TextView
                    android:id="@+id/t12"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/屏幕类型" />

                <TextView
                    android:id="@+id/t13"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d13"
                    android:padding="3dip" />

            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/屏幕大小" />

                <TextView
                    android:id="@+id/t14"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/屏幕分辨率" />

                <TextView
                    android:id="@+id/t15"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d15"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/屏幕刷新率" />

                <TextView
                    android:id="@+id/t16"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d16"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/摄像头类型" />

                <TextView
                    android:id="@+id/t17"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d17"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/后置摄像头" />

                <TextView
                    android:id="@+id/t18"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d18"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/后置摄像头2" />

                <TextView
                    android:id="@+id/t19"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d19"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/后者摄像头3" />

                <TextView
                    android:id="@+id/t20"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d20"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/后者摄像头4" />

                <TextView
                    android:id="@+id/t21"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d21"
                    android:padding="3dip" />
            </TableRow>

            <TableRow android:layout_height="wrap_content">

                <TextView
                    android:padding="3dip"
                    android:text="@string/前置摄像头" />

                <TextView
                    android:id="@+id/t22"
                    android:layout_width="90dp"
                    android:padding="3dip" />

                <TextView
                    android:id="@+id/d22"
                    android:padding="3dip" />
            </TableRow>


        </TableLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

</layout>